kubernetes/apps/rook-ceph/cluster/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
w  name: ceph-rgw-ingress
  namespace: rook-ceph
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  rules:
    - host: s3ceph.wakkalabs.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rook-ceph-rgw-ceph-objectstore
                port:
                  number: 80
